# ml-zc-2025

./: .gitignore  Dockerfile  Readme.md  main.py  pyproject.toml  requirements.txt  uv-installation.md
midterm-project/: Readme.md  custom_transformer.py  notebook.ipynb  predict.py  test.py  train.py
week1/: homework.ipynb  notes.md  w1-07-numpy-practice.ipynb  w1-08-linear-algebra.ipynb  w1-09-pandas.ipynb
week10/: homework.ipynb  notes.md  q6_load.py
week10/hw/: deployment.yml
week10/service/: Dockerfile  pyproject.toml
week2/: homework.ipynb  notes.md  week2-regression.ipynb
week3/: homework.ipynb  notes.md  week3-classification.ipynb
week4/: homework.ipynb  notes.md  week4-evaluation.ipynb
week5/: homework.ipynb  notes.md  ping.py  predict-homework.py  predict-test.py  predict.py  week5-deployment.ipynb  week5-deployment.py  week5-load-model.ipynb  week5-load-model.py
week6/: homework.ipynb  notes.md  week6-trees.ipynb
week8/: homework.ipynb  notes.md  week8-deep-learning.ipynb  week8-pytorch-deep-learning.ipynb
week9/: notes.md
week9/homework/: .gitignore  Dockerfile  homework.ipynb  lambda_function.py
week9/serverless-workshop/lambda-sklearn/: Dockerfile  build.sh  run.sh  test.py
week9/serverless-workshop/train/: train.py
