[project]
name = "ml-zc-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.5",
    "fastapi>=0.120.0",
    "flask>=3.1.2",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "keras>=3.12.0",
    "keras-image-helper>=0.0.2",
    "numpy>=2.3.3",
    "onnxruntime>=1.23.2",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "scikit-learn==1.6.1",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "torch>=2.9.1",
    "torchsummary>=1.5.1",
    "torchvision>=0.24.1",
    "tqdm>=4.67.1",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.1",
]
